@@ -32,6 +32,8 @@
        include in the generated patchfile. See issue #135. (Stefan)
 - NEW: Right-dragging in the repository browser allows to rename the file
        or folder with the move/copy. (Stefan)
+- NEW: New column in the repository browser with the file extensions to make
+       it possible to sort by those file extensions. See issue #142. (Stefan)
 - CHG: Setup UI changed from the dark'd code from the VS-generated package
        to a standardised framework from the WiX tutorial. 
        See issue #147. (Pete)
